AmpShare SF Codebase/force-app/main/default/objects/availability__dlm/availability__dlm.object-meta.xml
<CustomObject>
    <mktDataModelAttributes>
        <creationType>Custom</creationType>
        <dataModelTaxonomy>Salesforce_SFDCReferenceModel_0_93</dataModelTaxonomy>
        <dataSpaceName>default</dataSpaceName>
        <isEnabled>true</isEnabled>
        <isSegmentable>false</isSegmentable>
        <isUsedForMetrics>false</isUsedForMetrics>
        <labelOverride>availability</labelOverride>
        <masterLabel>availability</masterLabel>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Engagement</objectCategory>
    </mktDataModelAttributes>
</CustomObject>