AmpShare SF Codebase/force-app/main/default/objects/availability__dlm/fields/Account_Reference__c.field-meta.xml
<CustomField>
    <fullName>Account_Reference__c</fullName>
    <label>Account_Reference</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Account_Reference</labelOverride>
        <masterLabel>Account_Reference</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>