AmpShare SF Codebase/force-app/main/default/objects/availability__dlm/fields/Charger_reference__c.field-meta.xml
<CustomField>
    <fullName>Charger_reference__c</fullName>
    <label>Charger_reference</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Charger_reference</labelOverride>
        <masterLabel>Charger_reference</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>