AmpShare SF Codebase/force-app/main/default/objects/availability__dlm/fields/chargercity__c.field-meta.xml
<CustomField>
    <fullName>chargercity__c</fullName>
    <label>chargercity</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>true</isDynamicLookup>
        <labelOverride>chargercity</labelOverride>
        <masterLabel>chargercity</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>