AmpShare SF Codebase/force-app/main/default/objects/availability__dlm/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <label>Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Date</labelOverride>
        <masterLabel>Date</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>