AmpShare SF Codebase/force-app/main/default/objects/availability__dlm/fields/id__c.field-meta.xml
<CustomField>
    <fullName>id__c</fullName>
    <label>id</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>id</labelOverride>
        <masterLabel>id</masterLabel>
        <primaryIndexOrder>1</primaryIndexOrder>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>