AmpShare SF Codebase/force-app/main/default/objects/availability__dlm/fields/Is_reserved__c.field-meta.xml
<CustomField>
    <fullName>Is_reserved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is_reserved</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Is_reserved</labelOverride>
        <masterLabel>Is_reserved</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>