AmpShare SF Codebase/force-app/main/default/objects/availability__dlm/fields/price__c.field-meta.xml
<CustomField>
    <fullName>price__c</fullName>
    <label>price</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>price</labelOverride>
        <masterLabel>price</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>