AmpShare SF Codebase/force-app/main/default/objects/availability__dlm/fields/reservedby__c.field-meta.xml
<CustomField>
    <fullName>reservedby__c</fullName>
    <label>reservedby</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>reservedby</labelOverride>
        <masterLabel>reservedby</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>