AmpShare SF Codebase/force-app/main/default/objects/availability__dlm/fields/timeslots__c.field-meta.xml
<CustomField>
    <fullName>timeslots__c</fullName>
    <label>timeslots</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>timeslots</labelOverride>
        <masterLabel>timeslots</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>